<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.luandkg.guilherme.activities.AvaliadorFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.luandkg.guilherme.activities.HorarioFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.luandkg.guilherme.activities.BimestreFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_semanas"
        android:name="com.luandkg.guilherme.activities.SemanasFragment"
        android:label="@string/menu_semanas"
        tools:layout="@layout/fragment_semanas" />

    <fragment
        android:id="@+id/nav_desempenho"
        android:name="com.luandkg.guilherme.activities.DesempenhoFragment"
        android:label="@string/menu_desempenho"
        tools:layout="@layout/fragment_desempenho" />
</navigation>